--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -1,10 +1,13 @@
 .contenedor {
+    position: absolute;
     display: flex;
     flex-direction: row;
     width: 900px;
     height: 600px;
-    margin: auto;
-    margin-top: 100px;
+    top: 50%;
+    left: 50%;
+    margin-left: -450px;
+    margin-top: -300px;
     border-radius: 10px;
     background-color: rgb(238, 238, 238);
 }
@@ -28,6 +31,6 @@
     
 }
 
-.h1 {
-    line-height: 5px;
+h1 {
+    margin: 0;
 }
