--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     height: 20px;
     padding: 30px;
-    background-color: rgb(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.945);
 }
 
 a {
